--- a/package.json
+++ b/package.json
@@ -3,22 +3,20 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-"scripts": {
-  "dev": "vite",
-  "build": "vite build",
-  "preview": "vite preview",
-  "postinstall": "npm rebuild esbuild"
-}
-,
-
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "postinstall": "npm rebuild esbuild"
+  },
   "dependencies": {
     "axios": "^1.8.4",
     "gemini-ai": "^2.2.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "vite": "^5.4.20"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^4.3.4",
-    "vite": "^6.2.0"
+    "@vitejs/plugin-react": "^4.3.4"
   }
 }
