--- a/package.json
+++ b/package.json
@@ -1,22 +1,20 @@
 {
   "name": "chatbot",
+  "version": "1.0.0",
   "private": true,
-  "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "postinstall": "npm rebuild esbuild"
+    "preview": "vite preview"
   },
   "dependencies": {
     "axios": "^1.8.4",
-    "gemini-ai": "^2.2.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "vite": "^5.4.20"
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^4.3.4"
+    "@vitejs/plugin-react": "^4.3.4",
+    "vite": "^6.2.0"
   }
 }
